changes of styling on book now page

--- a/src/app/components/book-now/book-now.component.html
+++ b/src/app/components/book-now/book-now.component.html
@@ -1,31 +1,127 @@
 <!-- booking-form.component.html -->
 
 <div class="container">
+  <div class="card-container">
+    <div class="card" >
+      <i class="fa-regular fa-clock" style="margin-top: 20px; text-align: center; color: #5bc2ce"></i>
+        <h4 style="box-sizing: border-box;
+        font-family: Helvetica, Sans-Serif;
+        font-weight: bold;
+        line-height: 1.1;
+        color: rgb(55, 62, 74);
+        font-size: 14px;
+        margin-top: 8.5px;
+        margin-bottom: 8.5px;
+        text-align: center;
+        padding: 0px 20px;">
+      SAVES YOU TIME</h4>
+        <p style="box-sizing: border-box; color: #6d6e73; text-align: center; margin: 0px 0px 8.5px; padding: 0px 20px 40px; ">Our service helps you live smarter, giving you time to focus on what's most important.</p>
+
+
+        <i class="fa-solid fa-shield-heart" style="text-align: center; color: #5bc2ce"></i>
+        <h4 style="box-sizing: border-box;
+         font-family: Helvetica, Sans-Serif;
+        font-weight: bold;
+        line-height: 1.1;
+        color: rgb(55, 62, 74);
+        font-size: 14px;
+        margin-top: 8.5px;
+        margin-bottom: 8.5px;
+        text-align: center;
+        padding: 0px 20px;">SAFETY FIRST</h4>
+        <p style="box-sizing: border-box; color: #6d6e73;  text-align: center; margin: 0px 0px 8.5px; padding: 0px 20px 40px; ">We rigorously vet all professional cleaners, who undergo identity checks as well as in-person interviews.</p>
+        
+        
+        <i class="fa-solid fa-thumbs-up" style="text-align: center; color: #5bc2ce"></i>
+        <h4 style="box-sizing: border-box;
+         font-family: Helvetica, Sans-Serif;
+        font-weight: bold;
+        line-height: 1.1;
+        color: rgb(55, 62, 74);
+        font-size: 14px;
+        margin-top: 8.5px;
+        margin-bottom: 8.5px;
+        text-align: center;
+        padding: 0px 20px;">ONLY THE BEST QUALITY</h4>
+        <p style="box-sizing: border-box; color: #6d6e73; text-align: center; margin: 0px 0px 8.5px; padding: 0px 20px 40px; ">Skilled professionals go above and beyond on every job. Cleaners are rated and reviewed after each task.</p>
+        
+        
+        
+        
+        
+        
+        <i class="fa-solid fa-wand-magic-sparkles" style="text-align: center; color: #5bc2ce"></i>
+        <h4 style="box-sizing: border-box;
+         font-family: Helvetica, Sans-Serif;
+        font-weight: bold;
+        line-height: 1.1;
+        color: rgb(55, 62, 74);
+        font-size: 14px;
+        margin-top: 8.5px;
+        margin-bottom: 8.5px;
+        text-align: center;
+        padding: 0px 20px;">EASY TO GET HELP</h4>
+        <p style="box-sizing: border-box; color: #6d6e73; text-align: center; margin: 0px 0px 8.5px; padding: 0px 20px 40px; ">Select your ZIP code, number of bedrooms and square footage, date and relax while we take care of your home.</p>
+        
+        
+        
+        <i class="fa-regular fa-message" style="text-align: center; color: #5bc2ce"></i>
+        <h4 style="box-sizing: border-box;
+         font-family: Helvetica, Sans-Serif;
+        font-weight: bold;
+        line-height: 1.1;
+        color: rgb(55, 62, 74);
+        font-size: 14px;
+        margin-top: 8.5px;
+        margin-bottom: 8.5px;
+        text-align: center;
+        padding: 0px 20px;">SEAMLESS COMMUNICATION</h4>
+        <p style="box-sizing: border-box; color: #6d6e73; margin: 0px 0px 8.5px; padding: 0px 20px 40px; ">Online communication makes it easy for you to stay in touch with our support team.</p>
+        
+        
+        
+        
+        <i class="fa-brands fa-cc-visa" style="text-align: center; color: #5bc2ce"></i>
+        <h4 style="box-sizing: border-box;
+         font-family: Helvetica, Sans-Serif;
+        font-weight: bold;
+        line-height: 1.1;
+        text-align: center;
+        color: rgb(55, 62, 74);
+        font-size: 14px;
+        margin-top: 8.5px;
+        margin-bottom: 8.5px;
+        padding: 0px 20px;">CASH FREE PAYMENT</h4>
+        <p style="box-sizing: border-box; color: #6d6e73; text-align: center; margin: 0px 0px 8.5px; padding: 0px 20px 40px; ">Pay securely online only when the cleaning is complete.</p>
+    </div>
+  </div>
     <form (ngSubmit)="onSubmit()" #bookNowForm="ngForm" class="form-container">
-      <h2>Complete your Booking.</h2>
-      <h6>Great! Few details and we can complete your booking. 
-          Please give us a call 818-208-1698 if you have any questions during the process.</h6>
+      <h2 style="font-family: Helvetica, Sans-Serif; text-align: center; padding-bottom: 10px">Complete your Booking.</h2>
+      <h6 style="font-weight: 100; font-family: proxima,arial;
+      color: #373e4a;">Great! Few details and we can complete your booking. </h6>
     <hr>
       <!-- Name Input -->
-      <div class="form-group">
-        <label for="name">STEP 1: CHOOSE YOUR SERVICE</label>
-            Tell us about your home.
-            Please call us for a custom quote if your house is 5 bdrm or more and you need a deep cleaning or move out cleaning.
+      <div class="form-group" style="margin-bottom: 30px;">
+        <label for="name" style="font-weight: 100; font-family: proxima,arial;
+        color: #373e4a;">STEP 1: CHOOSE YOUR SERVICE</label>
+            <span style="font-family: proxima,arial;
+            color: #ababab; font-weight: 100; line-height: 1.42857143;">Tell us about your home.</span>
             <select id="name" name="name" style="width: 100%;
-            padding: 10px;
+            padding: 5px;
+            color: #555; font-weight:200;
             box-sizing: border-box;
             border: 1px solid #ccc;
             border-radius: 5px;
             margin-top: 5px;">
-              <option value="Standard" selected>Standard Cleaning Package</option>
-              <option value="Signature">Signature Cleaning Package</option>
-              <option value="Platinum">Platinum Cleaning Package</option>
-              <option value="Laundry">Laundry</option>
-              <option value="Fridge">Fridge Interior Clean</option>
-              <option value="Window">Window Sill Cleaning</option>
-              <option value="Pantry">Pantry Organization</option>
-              <option value="Closet">Closet Organization</option>
-              <option value="Vents">Vents Cleaning</option>
+              <option value="Standard" selected style="color: #555; font-weight:200; display: block;">Standard Cleaning Package</option>
+              <option style="color: #555; font-weight:200; display: block;" value="Signature">Signature Cleaning Package</option>
+              <option style="color: #555; font-weight:200; display: block;" value="Platinum">Platinum Cleaning Package</option>
+              <option style="color: #555; font-weight:200; display: block;" value="Laundry">Laundry</option>
+              <option style="color: #555; font-weight:200; display: block;" value="Fridge">Fridge Interior Clean</option>
+              <option style="color: #555; font-weight:200; display: block;" value="Window">Window Sill Cleaning</option>
+              <option style="color: #555; font-weight:200; display: block;" value="Pantry">Pantry Organization</option>
+              <option style="color: #555; font-weight:200; display: block;" value="Closet">Closet Organization</option>
+              <option style="color: #555; font-weight:200; display: block;" value="Vents">Vents Cleaning</option>
             </select>
       </div>
   
@@ -36,9 +132,10 @@
   
       <!-- Address Input -->
       
-        <label>STEP 2: WHO YOU ARE</label>
-        <p>This information will be used to contact you about your service.</p>
-      <div class="form-group">
+        <label style="font-weight: 100; font-family: proxima,arial;
+        color: #373e4a;">STEP 2: WHO YOU ARE</label>
+        <span style="font-family: proxima,arial;color: #ababab; font-weight: 100; line-height: 1.42857143;">This information will be used to contact you about your service.</span>
+      <div class="form-group" style="margin-bottom: 30px;">
         <div style="display: flex; width: 100%; height:80%">
           <div style="width: 48%;  margin-right: 15px;font:100 16px proxima,Arial,Helvetica,sans-serif">
             <input type="text" id="first_name" name="first_name" [(ngModel)]="formData.first_name" placeholder="First Name" required>
@@ -59,9 +156,10 @@
         
     </div>
 
-      <h5>STEP 3: YOUR HOME</h5>
-        <p>Where would you like us to clean?</p>
-      <div class="form-group">
+      <label style="font-weight: 100; font-family: proxima,arial;
+      color: #373e4a;">STEP 3: YOUR HOME</label>
+        <span style="font-family: proxima,arial;color: #ababab; font-weight: 100; line-height: 1.42857143;">Where would you like us to clean?</span>
+      <div class="form-group" style="margin-bottom: 30px;">
         <div style="display: flex; width: 100%;">
 
           <!-- Address takes 100% of the line -->
@@ -88,16 +186,16 @@
         
           
         
-
-      <H5>When would you like us to come?</H5>
-      <div class="form-group">
+          <label style="font-weight: 100; font-family: proxima,arial;
+          color: #373e4a;">STEP 4: WHEN WOULD YOU LIKE US TO COME?</label>
+      <div class="form-group" style="margin-bottom: 30px;">
         <div class="row" style="margin-right: 0;">
           <div class="col-md-6 mb-3">
-            <label for="selected_date">Choose a Date:</label>
+            <label for="selected_date" style="font-family: proxima,arial;color: #ababab; font-weight: 100; line-height: 1.42857143;">Choose a Date:</label>
             <input type="date" id="selected_date" name="selected_date" [(ngModel)]="formData.selected_date" class="form-control" required>
           </div>
           <div class="col-md-6 mb-3">
-            <label for="selected_time">Choose a Time:</label>
+            <label for="selected_time" style="font-family: proxima,arial;color: #ababab; font-weight: 100; line-height: 1.42857143;">Choose a Time:</label>
             <select id="selected_time" name="selected_time" [(ngModel)]="formData.selected_time" class="form-control" required>
               <option *ngFor="let hour of generateHours()" [value]="hour">{{ hour }}</option>
             </select>
@@ -105,9 +203,10 @@
         </div>
       </div>
   
-    <div class="form-group">
-      <label>How often?</label>
-      <P>It's all about matching you with the perfect clean for your home. Scheduling is flexible. Cancel or reschedule anytime before 5 pm the day before service.      </P>
+    <div class="form-group" style="margin-bottom: 30px;">
+      <label style="font-weight: 100; font-family: proxima,arial;
+      color: #373e4a;">STEP 5: HOW OFTEN?</label>
+      <span style="font-family: proxima,arial;color: #ababab; font-weight: 100; line-height: 1.42857143;">It's all about matching you with the span erfect clean for your home. Scheduling is flexible.</span>
       <div class="button-group">
           <button type="button" class="frequency-button"
                   [class.selected]="formData.cleaning_frequency === 'every_3_weeks'"
@@ -131,134 +230,46 @@
       </div>
   </div>
   <div class="form-group">
-    <label for="cleaningOptions">Select Cleaning Options:</label>
-  <select id="cleaningOptions" name="cleaningOptions" ng-model="selectedOptions">
-    <option value="laundry">Laundry</option>
-    <option value="fridgeInteriorClean">Fridge Interior Clean</option>
-    <option value="windowSillCleaning">Window Sill Cleaning</option>
-    <option value="pantryOrganization">Pantry Organization</option>
-    <option value="closetOrganization">Closet Organization</option>
-    <option value="ventsCleaning">Vents Cleaning</option>
-  </select>
+    <div class="option-container">
+      <input type="checkbox" id="movingInOut" name="movingInOut" value="movingInOut">
+      <label for="movingInOut" class="option-label" style="font-family: proxima,arial;color: #373e4a; font-weight: 100; line-height: 1.42857143;">Moving In/Out</label>
+      <span class="tick"></span>
+    </div>
+    
+    <div class="option-container">
+      <input type="checkbox" id="balconyCleaning" name="balconyCleaning" value="balconyCleaning">
+      <label for="balconyCleaning" class="option-label" style="font-family: proxima,arial;color: #373e4a; font-weight: 100; line-height: 1.42857143;">Balcony Cleaning</label>
+      <span class="tick"></span>
+    </div>
+
   </div>
   
 
   <div class="form-group">
-    <label for="additional_notes">Additional Information:</label>
+    <label for="additional_notes" style="font-family: proxima,arial;color: #373e4a; font-weight: 100; line-height: 1.42857143;">Additional Information:</label>
     <textarea id="additional_notes" name="additional_notes" [(ngModel)]="formData.additional_notes"></textarea>
   </div>
 
   <div class="form-group">
     <div class="col-md-6 mb-3">
-      <label class="form-label" for="parking_option">Please choose parking option:</label>
-      <select id="parking_option" name="parking_option" [(ngModel)]="formData.parking_option" class="form-select">
-        <option value="street_parking">Street Parking</option>
-        <option value="driveway">Driveway</option>
-        <option value="parking_pass">Parking Pass</option>
-        <option value="guest_parking">Guest Parking</option>
-        <option value="parking_lot">Parking Lot</option>
+      <label class="form-label" for="parking_option" style="font-family: proxima,arial;color: #373e4a; font-weight: 100; line-height: 1.42857143;">Please choose parking option:</label>
+      <select id="parking_option" name="parking_option" [(ngModel)]="formData.parking_option" class="form-select" style="width: 100%;
+      padding: 5px;
+      color: #555; font-weight:200;
+      box-sizing: border-box;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      margin-top: 5px;">
+        <option selected style="color: #555; font-weight:200; display: block;" value="street_parking" >Street Parking</option>
+        <option style="color: #555; font-weight:200; display: block;" value="driveway">Driveway</option>
+        <option style="color: #555; font-weight:200; display: block;" value="parking_pass">Parking Pass</option>
+        <option style="color: #555; font-weight:200; display: block;"value="guest_parking">Guest Parking</option>
+        <option style="color: #555; font-weight:200; display: block;" value="parking_lot">Parking Lot</option>
       </select>
     </div>
 </div>
     
       <button type="submit" [disabled]="!bookNowForm.valid">Submit</button>
     </form>
-
-
-
-        <div class="card-container">
-          <div class="card" >
-            <i class="fa-regular fa-clock" style="margin-top: 20px; text-align: center;"></i>
-              <h4 style="box-sizing: border-box;
-              font-family: inherit;
-              font-weight: bold;
-              line-height: 1.1;
-              color: rgb(55, 62, 74);
-              font-size: 16px;
-              margin-top: 8.5px;
-              margin-bottom: 8.5px;
-              text-align: center;
-              padding: 0px 20px;">
-            SAVES YOU TIME</h4>
-              <p style="box-sizing: border-box; text-align: center; margin: 0px 0px 8.5px; padding: 0px 20px 40px; font-weight: lighter;">Our service helps you live smarter, giving you time to focus on what's most important.</p>
-
-
-              <i class="fa-solid fa-shield-heart" style="text-align: center"></i>
-              <h4 style="box-sizing: border-box;
-              font-family: inherit;
-              font-weight: bold;
-              line-height: 1.1;
-              color: rgb(55, 62, 74);
-              font-size: 16px;
-              margin-top: 8.5px;
-              margin-bottom: 8.5px;
-              text-align: center;
-              padding: 0px 20px;">SAFETY FIRST</h4>
-              <p style="box-sizing: border-box;  text-align: center; margin: 0px 0px 8.5px; padding: 0px 20px 40px; font-weight: lighter;">We rigorously vet all professional cleaners, who undergo identity checks as well as in-person interviews.</p>
-              
-              
-              <i class="fa-solid fa-thumbs-up" style="text-align: center"></i>
-              <h4 style="box-sizing: border-box;
-              font-family: inherit;
-              font-weight: bold;
-              line-height: 1.1;
-              color: rgb(55, 62, 74);
-              font-size: 16px;
-              margin-top: 8.5px;
-              margin-bottom: 8.5px;
-              text-align: center;
-              padding: 0px 20px;">ONLY THE BEST QUALITY</h4>
-              <p style="box-sizing: border-box; text-align: center; margin: 0px 0px 8.5px; padding: 0px 20px 40px; font-weight: lighter;">Skilled professionals go above and beyond on every job. Cleaners are rated and reviewed after each task.</p>
-              
-              
-              
-              
-              
-              
-              <i class="fa-solid fa-wand-magic-sparkles" style="text-align: center"></i>
-              <h4 style="box-sizing: border-box;
-              font-family: inherit;
-              font-weight: bold;
-              line-height: 1.1;
-              color: rgb(55, 62, 74);
-              font-size: 16px;
-              margin-top: 8.5px;
-              margin-bottom: 8.5px;
-              text-align: center;
-              padding: 0px 20px;">EASY TO GET HELP</h4>
-              <p style="box-sizing: border-box; text-align: center; margin: 0px 0px 8.5px; padding: 0px 20px 40px; font-weight: lighter;">Select your ZIP code, number of bedrooms and square footage, date and relax while we take care of your home.</p>
-              
-              
-              
-              <i class="fa-regular fa-message" style="text-align: center"></i>
-              <h4 style="box-sizing: border-box;
-              font-family: inherit;
-              font-weight: bold;
-              line-height: 1.1;
-              color: rgb(55, 62, 74);
-              font-size: 16px;
-              margin-top: 8.5px;
-              margin-bottom: 8.5px;
-              text-align: center;
-              padding: 0px 20px;">SEAMLESS COMMUNICATION</h4>
-              <p style="box-sizing: border-box; margin: 0px 0px 8.5px; padding: 0px 20px 40px; font-weight: lighter;">Online communication makes it easy for you to stay in touch with our support team.</p>
-              
-              
-              
-              
-              <i class="fa-brands fa-cc-visa" style="text-align: center"></i>
-              <h4 style="box-sizing: border-box;
-              font-family: inherit;
-              font-weight: bold;
-              line-height: 1.1;
-              text-align: center;
-              color: rgb(55, 62, 74);
-              font-size: 16px;
-              margin-top: 8.5px;
-              margin-bottom: 8.5px;
-              padding: 0px 20px;">CASH FREE PAYMENT</h4>
-              <p style="box-sizing: border-box; text-align: center; margin: 0px 0px 8.5px; padding: 0px 20px 40px; font-weight: lighter;">Pay securely online only when the cleaning is complete.</p>
-          </div>
-      </div>
   </div>
   
