--- a/src/app/components/book-now/book-now.component.scss
+++ b/src/app/components/book-now/book-now.component.scss
@@ -94,5 +94,52 @@ button:disabled {
 .card-container {
   width: 50%; /* Adjust the width as needed */
   padding: 20px; /* Add padding for spacing */
-  border-left: 1px solid #ccc; /* Add a border between form and cards */
+}
+
+.option-container {
+  display: flex;
+  align-items: center;
+}
+
+.option-label {
+  margin-left: 10px;
+  font-size: 16px;
+}
+
+.custom-checkbox {
+  position: relative;
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+  background-color: #fff;
+  border: 2px solid #aaa;
+  border-radius: 4px;
+  margin-left: auto;
+  cursor: pointer;
+}
+
+.custom-checkbox::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 10px;
+  height: 10px;
+  border: 2px solid #fff;
+  border-top: none;
+  border-right: none;
+  background-color: transparent;
+  opacity: 0;
+}
+
+input[type="checkbox"]:checked + .custom-checkbox::after {
+  opacity: 1;
+}
+
+/* Optional: Custom tick design */
+input[type="checkbox"]:checked + .custom-checkbox::after {
+  content: "\\2713"; /* Unicode checkmark symbol */
+  font-size: 14px;
+  color: #007bff; /* Change color as needed */
 }
