--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,8 +1,16 @@
-<mat-toolbar color="primary" class="mat-elevation-z4">
-  <span>LuxeClean Services</span>
-
-  <div class="spacer"></div>
-  <a mat-button routerLink="/">Home</a>
-  <a mat-button routerLink="/service">Services & Prices</a>
-  <a mat-button routerLink="/book-now">Book Now</a>
-</mat-toolbar>
+<nav class="navbar">
+  <div class="navbar-container container">
+      <input type="checkbox" name="" id="">
+      <div class="hamburger-lines">
+          <span class="line line1"></span>
+          <span class="line line2"></span>
+          <span class="line line3"></span>
+      </div>
+      <ul class="menu-items">
+          <li><a href="/">Home</a></li>
+          <li><a href="/service">Services & Prices</a></li>
+          <li><a href="/book-now">Book Now</a></li>
+      </ul>
+      <h5 class="logo">LuxeClean Service</h5>
+  </div>
+</nav>
