update home page and others

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,5 +1,5 @@
 .footer {
-    background-color: #3498db;
+    background-color: #FF2E63;
     color: #fff;
     padding: 20px 0;
   }
@@ -35,7 +35,7 @@
   
   .book-now-link a:hover {
     background-color: #fff;
-    color: #3498db;
+    color: #FF2E63;
   }
 
   .quick-links li {
