--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,18 +1,10 @@
-<div class="card">
-    <img src="assets/home-images/home_book_now_card_3.jpg" alt="Book Now" class="card-image">
-    <div class="card-content">
-        <h3 class="card-title">
-            LuxeClean Services
-        </h3>
-        <p class="card-description">
-            We're the best at what we do!
-        </p>
-        <h4 class="card-description">
-            Book our services in just 60 seconds.
-        </h4>
-      <button class="btn" routerLink="/book-now">Book Now</button>
+<div class="landing-image">
+    <div class="landing-content">
+      <h1 class="company-name">Welcome to a cleaner home!</h1>
+      <h4 class="contact-number">Call us at: +1234567890</h4>
+      <button routerLink="/book-now" class="book-now-btn">Book Now</button>
     </div>
-</div>
+  </div>  
 
 <app-faq></app-faq>
 
