--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,10 @@
 /* app.component.css */
 
+body {
+  font-family: Helvetica, sans-serif;
+  background-color: #08D9D6;
+}
+
 div {
     display: flex;
     flex-direction: column;
