--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,46 +1,34 @@
-.card {
-  border: 1px solid #ddd;
-  border-radius: 8px;
-  overflow: hidden;
-  margin: 16px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+.landing-image {
+  background-image: url('/assets/home-images/wide-landing-2.jpeg');
+  background-size: cover;
+  background-position: center;
+  height: 580px; /* Adjust the height as needed */
 }
 
-.card-image {
-  width: 100%;
-  height: 200px; /* Adjust the height as needed */
-  object-fit: cover;
+.landing-content {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  text-align: center;
 }
 
-.card-content {
-  padding: 16px;
+.company-name {
+  font-size: 50px;
+  color: #E5E4E2;
 }
 
-.card-title {
-  font-size: 1.5rem;
-  margin-bottom: 8px;
-}
-
-.card-description {
-  color: #555;
-  font-size: 1.1rem;
-  margin-bottom: 16px;
-}
-
-.btn {
-  background-color: #3498db;
+.contact-number {
+  font-size: 20px;
   color: #fff;
-  padding: 8px 16px;
+  margin-bottom: 20px;
+}
+
+.book-now-btn {
+  background-color: #FF2E63;
+  color: #fff;
+  padding: 10px 20px;
   border: none;
-  border-radius: 4px;
+  border-radius: 5px;
+  font-size: 25px;
   cursor: pointer;
 }
-/* home.component.css */
-
-.welcome-container {
-    text-align: center;
-    margin-top: 50px; /* Adjust the margin to your liking for vertical spacing */
-  }
-  
-  /* Add any additional styling as needed */
-  
