--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -1,5 +1,3 @@
-@import '@angular/material/prebuilt-themes/indigo-pink.css';
-
 *,
 *::after,
 *::before {
@@ -48,19 +46,14 @@ body {
   
   /* desktop mode............/// */
   
-  .navbar input[type="checkbox"],
-  .navbar .hamburger-lines {
-    display: none;
-  }
-  
   .navbar {
     box-shadow: 0px 5px 10px 0px #aaa;
     position: fixed;
     width: 100%;
     background: #fff;
-    color: #000;
+    color: #252A34;
     opacity: 0.85;
-    height: 50px;
+    height: 60px;
     z-index: 12;
   }
   
