--- a/src/app/components/service/signature/signature.component.html
+++ b/src/app/components/service/signature/signature.component.html
@@ -66,7 +66,7 @@
         <div class="column">
             <div class="section">
                 <div class="text">
-                    <p class="highlight">Laundry:</p>
+                    <p><span class="highlight">Laundry:</span></p>
                     <ul>
                         <li><span class="sub-highlight">Full Laundry Service:</span> Sorting, washing, drying, folding, and putting away clothes.</li>
                         <li><span class="sub-highlight">Special Care for Sensitive Garments:</span> Hand-washing or dry cleaning as per your preference.</li>
@@ -85,7 +85,7 @@
         <div class="column">
             <div class="section">
                 <div class="text">
-                    <p class="highlight">Fridge Interior Clean:</p>
+                    <p ><span class="highlight">Fridge Interior Clean:</span></p>
                     <ul>
                         <li><span class="sub-highlight">Comprehensive Cleaning:</span> Thorough cleaning of all interior shelves, drawers, and compartments.</li>
                         <li><span class="sub-highlight">Food-Safe Agents:</span> Use of food-safe cleaning agents for a sanitized and fresh fridge.</li>
@@ -104,7 +104,7 @@
         <div class="column">
             <div class="section">
                 <div class="text">
-                    <p class="highlight">Window Sill Cleaning:</p>
+                    <p><span class="highlight">Window Sill Cleaning:</span></p>
                     <ul>
                         <li><span class="sub-highlight">Thorough Cleaning:</span> Comprehensive cleaning and wiping down of all accessible window sills.</li>
                         <li><span class="sub-highlight">Specialized Tools:</span> Use of specialized tools to clean corners and hard-to-reach areas.</li>
@@ -122,7 +122,7 @@
         <div class="column">
             <div class="section">
                 <div class="text">
-                    <p class="highlight">Vents Cleaning:</p>
+                    <p><span class="highlight">Vents Cleaning:</span></p>
                     <ul>
                         <li><span class="sub-highlight">Air Quality Enhancement:</span> Thorough cleaning of air vents and exhausts for improved indoor air quality.</li>
                         <li><span class="sub-highlight">Vent Interior Washing:</span> Detailed washing of interior areas to remove dust and debris.</li>
