--- a/src/app/components/service/platinum/platinum.component.html
+++ b/src/app/components/service/platinum/platinum.component.html
@@ -66,7 +66,7 @@
         <div class="column">
             <div class="section">
                 <div class="text">
-                    <p class="highlight">Laundry:</p>
+                    <p><span class="highlight">Laundry:</span></p>
                     <ul>
                         <li><span class="sub-highlight">Full Laundry Service:</span> Sorting, washing, drying, folding, and putting away clothes.</li>
                         <li><span class="sub-highlight">Special Care for Sensitive Garments:</span> Hand-washing or dry cleaning as per your preference.</li>
@@ -85,7 +85,7 @@
         <div class="column">
             <div class="section">
                 <div class="text">
-                    <p class="highlight">Fridge Interior Clean:</p>
+                    <p ><span class="highlight">Fridge Interior Clean:</span></p>
                     <ul>
                         <li><span class="sub-highlight">Comprehensive Cleaning:</span> Thorough cleaning of all interior shelves, drawers, and compartments.</li>
                         <li><span class="sub-highlight">Food-Safe Agents:</span> Use of food-safe cleaning agents for a sanitized and fresh fridge.</li>
@@ -104,7 +104,7 @@
         <div class="column">
             <div class="section">
                 <div class="text">
-                    <p class="highlight">Window Sill Cleaning:</p>
+                    <p><span class="highlight">Window Sill Cleaning:</span></p>
                     <ul>
                         <li><span class="sub-highlight">Thorough Cleaning:</span> Comprehensive cleaning and wiping down of all accessible window sills.</li>
                         <li><span class="sub-highlight">Specialized Tools:</span> Use of specialized tools to clean corners and hard-to-reach areas.</li>
@@ -122,7 +122,7 @@
         <div class="column">
             <div class="section">
                 <div class="text">
-                    <p class="highlight">Vents Cleaning:</p>
+                    <p><span class="highlight">Vents Cleaning:</span></p>
                     <ul>
                         <li><span class="sub-highlight">Air Quality Enhancement:</span> Thorough cleaning of air vents and exhausts for improved indoor air quality.</li>
                         <li><span class="sub-highlight">Vent Interior Washing:</span> Detailed washing of interior areas to remove dust and debris.</li>
@@ -141,7 +141,7 @@
         <div class="column">
             <div class="section">
                 <div class="text">
-                    <p class="highlight">Exterior Window Cleaning:</p>
+                    <p><span class="highlight">Exterior Window Cleaning: </span></p>
                     <ul>
                         <li><span class="sub-highlight">Comprehensive cleaning of all exterior window surfaces:</span> Using professional equipment and environmentally safe cleaning agents.</li>
                         <li><span class="sub-highlight">Squeegeeing and wiping down the glass:</span> For a streak-free finish.</li>
@@ -160,7 +160,7 @@
         <div class="column">
             <div class="section">
                 <div class="text">
-                    <p class="highlight">Closet Organization:</p>
+                    <p><span class="highlight">Closet Organization:</span></p>
                     <h5 class="sub-highlight">Kids' Closets:</h5>
                     <ul>
                         <li><span class="sub-highlight">Sorting and organizing children's clothes:</span> By size and season.</li>
@@ -183,7 +183,7 @@
         <div class="column">
             <div class="section">
                 <div class="text">
-                    <p class="highlight">Pantry Organization:</p>
+                    <p><span class="highlight">Pantry Organization:</span></p>
                     <ul>
                         <li><span class="sub-highlight">Detailed organization of pantry items:</span> Categorizing items into sections like canned goods, snacks, and baking supplies.</li>
                         <li><span class="sub-highlight">Identification and separation of expired items:</span> (with client approval).</li>
