--- a/src/app/components/service/service.component.html
+++ b/src/app/components/service/service.component.html
@@ -1,11 +1,14 @@
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap">
+<head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+</head>
 <div class="container mt-4">
     <div class="row">
       <div class="col-md-6 offset-md-3">
         <div class="input-group mb-3">
           <div class="input-group-prepend">
-            <label class="input-group-text" for="areaFilter">Select by Area:</label>
+            <label class="input-group-text" for="areaFilter">Search by Area:</label>
           </div>
           <select class="custom-select" id="areaFilter" (change)="applyAreaFilter($event)">
             <option value="all">All</option>
@@ -24,40 +27,40 @@
         <div class="card">
             <img src="assets/home-images/standard.jpeg" alt="Book Now" class="card-image">
             <div class="card-content">
-                <h3 class="card-title">Standard cleaning package</h3>
-                <p class="card-description">
-                    $147 
-                </p>
-                <div class="button-container">
-                    <button class="btn"  routerLink="/standard" (click)="standardinfo()">Info</button>
-                    <button class="btn" routerLink="/book-now" (click)="bookNow()">Book Now</button>
+                <div>
+                    <h3 class="card-title">Standard Cleaning Package</h3>
+                    <div class="button-container">
+                        <button class="btn info-btn"  routerLink="/standard" (click)="standardinfo()"><i class="fas fa-info-circle"></i></button>
+                        <button class="btn" routerLink="/book-now" (click)="bookNow()">Book Now</button>
+                    </div>
                 </div>
+                <div><p class="card-description">$147</p></div>
             </div>
         </div>  
         <div class="card">
             <img src="assets/home-images/signature_cleaning.jpg" alt="Book Now" class="card-image">
             <div class="card-content">
-                <h3 class="card-title">Signature Suite Package</h3>
-                <p class="card-description">
-                    $247
-                </p>
-                <div class="button-container">
-                    <button class="btn" routerLink="/signature" (click)="signatureinfo()">Info</button>
-                    <button class="btn" routerLink="/book-now" (click)="bookNow()">Book Now</button>
+                <div>
+                    <h3 class="card-title">Signature Cleaning Package</h3>
+                    <div class="button-container">
+                        <button class="btn info-btn"  routerLink="/signature" (click)="signatureinfo()"><i class="fas fa-info-circle"></i></button>
+                        <button class="btn" routerLink="/book-now" (click)="bookNow()">Book Now</button>
+                    </div>
                 </div>
+                <div><p class="card-description">$247</p></div>
             </div>
         </div>  
         <div class="card">
             <img src="assets/home-images/platinum_cleaning.jpg" alt="Book Now" class="card-image">
             <div class="card-content">
-                <h3 class="card-title">Platinum Prestige package</h3>
-                <p class="card-description">
-                    $347
-                </p>
-                <div class="button-container">
-                    <button class="btn" routerLink="/platinum" (click)="platinuminfo()">Info</button>
-                    <button class="btn" routerLink="/book-now" (click)="bookNow()">Book Now</button>
+                <div>
+                    <h3 class="card-title">Platinum Cleaning Package</h3>
+                    <div class="button-container">
+                        <button class="btn info-btn"  routerLink="/platinum" (click)="platinuminfo()"><i class="fas fa-info-circle"></i></button>
+                        <button class="btn" routerLink="/book-now" (click)="bookNow()">Book Now</button>
+                    </div>
                 </div>
+                <div><p class="card-description">$347</p></div>
             </div>
         </div>  
     </div>
@@ -68,40 +71,40 @@
         <div class="card">
             <img src="assets/home-images/standard.jpeg" alt="Book Now" class="card-image">
             <div class="card-content">
-                <h3 class="card-title">Standard cleaning package</h3>
-                <p class="card-description">
-                    $247 
-                </p>
-                <div class="button-container">
-                    <button class="btn"  routerLink="/standard" (click)="standardinfo()">Info</button>
-                    <button class="btn" routerLink="/book-now" (click)="bookNow()">Book Now</button>
+                <div>
+                    <h3 class="card-title">Standard Cleaning Package</h3>
+                    <div class="button-container">
+                        <button class="btn info-btn"  routerLink="/standard" (click)="standardinfo()"><i class="fas fa-info-circle"></i></button>
+                        <button class="btn" routerLink="/book-now" (click)="bookNow()">Book Now</button>
+                    </div>
                 </div>
+                <div><p class="card-description">$247</p></div>
             </div>
         </div>  
         <div class="card">
             <img src="assets/home-images/signature_cleaning.jpg" alt="Book Now" class="card-image">
             <div class="card-content">
-                <h3 class="card-title">Signature Suite Package</h3>
-                <p class="card-description">
-                    $347
-                </p>
-                <div class="button-container">
-                    <button class="btn" routerLink="/signature" (click)="signatureinfo()">Info</button>
-                    <button class="btn" routerLink="/book-now" (click)="bookNow()">Book Now</button>
+                <div>
+                    <h3 class="card-title">Signature Cleaning Package</h3>
+                    <div class="button-container">
+                        <button class="btn info-btn"  routerLink="/signature" (click)="signatureinfo()"><i class="fas fa-info-circle"></i></button>
+                        <button class="btn" routerLink="/book-now" (click)="bookNow()">Book Now</button>
+                    </div>
                 </div>
+                <div><p class="card-description">$347</p></div>
             </div>
         </div>  
         <div class="card">
             <img src="assets/home-images/platinum_cleaning.jpg" alt="Book Now" class="card-image">
             <div class="card-content">
-                <h3 class="card-title">Platinum Prestige package</h3>
-                <p class="card-description">
-                    $447
-                </p>
-                <div class="button-container">
-                    <button class="btn" routerLink="/platinum" (click)="platinuminfo()">Info</button>
-                    <button class="btn" routerLink="/book-now" (click)="bookNow()">Book Now</button>
+                <div>
+                    <h3 class="card-title">Platinum Cleaning Package</h3>
+                    <div class="button-container">
+                        <button class="btn info-btn"  routerLink="/platinum" (click)="platinuminfo()"><i class="fas fa-info-circle"></i></button>
+                        <button class="btn" routerLink="/book-now" (click)="bookNow()">Book Now</button>
+                    </div>
                 </div>
+                <div><p class="card-description">$447</p></div>
             </div>
         </div>  
     </div>
@@ -112,40 +115,40 @@
         <div class="card">
             <img src="assets/home-images/standard.jpeg" alt="Book Now" class="card-image">
             <div class="card-content">
-                <h3 class="card-title">Standard cleaning package</h3>
-                <p class="card-description">
-                    $547
-                </p>
-                <div class="button-container">
-                    <button class="btn"  routerLink="/standard" (click)="standardinfo()">Info</button>
-                    <button class="btn" routerLink="/book-now" (click)="bookNow()">Book Now</button>
+                <div>
+                    <h3 class="card-title">Standard Cleaning Package</h3>
+                    <div class="button-container">
+                        <button class="btn info-btn"  routerLink="/standard" (click)="standardinfo()"><i class="fas fa-info-circle"></i></button>
+                        <button class="btn" routerLink="/book-now" (click)="bookNow()">Book Now</button>
+                    </div>
                 </div>
+                <div><p class="card-description">$547</p></div>
             </div>
         </div>  
         <div class="card">
             <img src="assets/home-images/signature_cleaning.jpg" alt="Book Now" class="card-image">
             <div class="card-content">
-                <h3 class="card-title">Signature Suite Package</h3>
-                <p class="card-description">
-                    $747
-                </p>
-                <div class="button-container">
-                    <button class="btn" routerLink="/signature" (click)="signatureinfo()">Info</button>
-                    <button class="btn" routerLink="/book-now" (click)="bookNow()">Book Now</button>
+                <div>
+                    <h3 class="card-title">Signature Cleaning Package</h3>
+                    <div class="button-container">
+                        <button class="btn info-btn"  routerLink="/signature" (click)="signatureinfo()"><i class="fas fa-info-circle"></i></button>
+                        <button class="btn" routerLink="/book-now" (click)="bookNow()">Book Now</button>
+                    </div>
                 </div>
+                <div><p class="card-description">$747</p></div>
             </div>
         </div>  
         <div class="card">
             <img src="assets/home-images/platinum_cleaning.jpg" alt="Book Now" class="card-image">
             <div class="card-content">
-                <h3 class="card-title">Platinum Prestige package</h3>
-                <p class="card-description">
-                    $947
-                </p>
-                <div class="button-container">
-                    <button class="btn" routerLink="/platinum" (click)="platinuminfo()">Info</button>
-                    <button class="btn" routerLink="/book-now" (click)="bookNow()">Book Now</button>
+                <div>
+                    <h3 class="card-title">Platinum Cleaning Package</h3>
+                    <div class="button-container">
+                        <button class="btn info-btn"  routerLink="/platinum" (click)="platinuminfo()"><i class="fas fa-info-circle"></i></button>
+                        <button class="btn" routerLink="/book-now" (click)="bookNow()">Book Now</button>
+                    </div>
                 </div>
+                <div><p class="card-description">$947</p></div>
             </div>
         </div>  
     </div>
@@ -156,37 +159,37 @@
         <div class="card">
             <img src="assets/home-images/laundry.jpg" alt="Book Now" class="card-image">
             <div class="card-content">
-                <h3 class="card-title">Laundry</h3>
-                <p class="card-description">
-                    $34
-                </p>
-                <div class="button-container">
-                    <button class="btn" routerLink="/book-now" (click)="bookNow()">Book Now</button>
+                <div>
+                    <h3 class="card-title">Laundry</h3>
+                    <div class="button-container">
+                        <button class="btn" routerLink="/book-now" (click)="bookNow()">Book Now</button>
+                    </div>
                 </div>
+                <div><p class="card-description">$34</p></div>
             </div>
         </div>  
         <div class="card">
             <img src="assets/home-images/fridge_cleaning.jpg" alt="Book Now" class="card-image">
             <div class="card-content">
-                <h3 class="card-title">Fridge Interior Clean</h3>
-                <p class="card-description">
-                    $27
-                </p>
-                <div class="button-container">
-                    <button class="btn" routerLink="/book-now" (click)="bookNow()">Book Now</button>
+                <div>
+                    <h3 class="card-title">Fridge Interior Clean</h3>
+                    <div class="button-container">
+                        <button class="btn" routerLink="/book-now" (click)="bookNow()">Book Now</button>
+                    </div>
                 </div>
+                <div><p class="card-description">$27</p></div>
             </div>
         </div>  
         <div class="card">
             <img src="assets/home-images/window_sill.jpg" alt="Book Now" class="card-image">
             <div class="card-content">
-                <h3 class="card-title">Window Sill Cleaning</h3>
-                <p class="card-description">
-                    $27
-                </p>
-                <div class="button-container">
-                    <button class="btn" routerLink="/book-now" (click)="bookNow()">Book Now</button>
+                <div>
+                    <h3 class="card-title">Window Sill Cleaning</h3>
+                    <div class="button-container">
+                        <button class="btn" routerLink="/book-now" (click)="bookNow()">Book Now</button>
+                    </div>
                 </div>
+                <div><p class="card-description">$27</p></div>
             </div>
         </div>  
     </div>
@@ -194,37 +197,37 @@
         <div class="card">
             <img src="assets/home-images/pantry_organization.jpeg" alt="Book Now" class="card-image">
             <div class="card-content">
-                <h3 class="card-title">Pantry Organization</h3>
-                <p class="card-description">
-                    $57
-                </p>
-                <div class="button-container">
-                    <button class="btn" routerLink="/book-now" (click)="bookNow()">Book Now</button>
+                <div>
+                    <h3 class="card-title">Pantry Organization</h3>
+                    <div class="button-container">
+                        <button class="btn" routerLink="/book-now" (click)="bookNow()">Book Now</button>
+                    </div>
                 </div>
+                <div><p class="card-description">$57</p></div>
             </div>
         </div>  
         <div class="card">
             <img src="assets/home-images/closet_organization.jpg" alt="Book Now" class="card-image">
             <div class="card-content">
-                <h3 class="card-title">Closet Organization</h3>
-                <p class="card-description">
-                    $111 (Kids' Closets and Master Bedroom Closet)
-                </p>
-                <div class="button-container">
-                    <button class="btn" routerLink="/book-now" (click)="bookNow()">Book Now</button>
+                <div>
+                    <h3 class="card-title">Closet Organization</h3>
+                    <div class="button-container">
+                        <button class="btn" routerLink="/book-now" (click)="bookNow()">Book Now</button>
+                    </div>
                 </div>
+                <div><p class="card-description">$111</p></div>
             </div>
         </div>  
         <div class="card">
             <img src="assets/home-images/vents_cleaning.jpg" alt="Book Now" class="card-image">
             <div class="card-content">
-                <h3 class="card-title">Vents Cleaning</h3>
-                <p class="card-description">
-                    $37
-                </p>
-                <div class="button-container">
-                    <button class="btn" routerLink="/book-now" (click)="bookNow()">Book Now</button>
+                <div>
+                    <h3 class="card-title">Vents Cleaning</h3>
+                    <div class="button-container">
+                        <button class="btn" routerLink="/book-now" (click)="bookNow()">Book Now</button>
+                    </div>
                 </div>
+                <div><p class="card-description">$37</p></div>
             </div>
         </div>  
     </div>
