--- a/src/app/components/service/service.component.scss
+++ b/src/app/components/service/service.component.scss
@@ -9,18 +9,15 @@
     margin-top: 20px;
     color: #2c3e50;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
+    font-family: 'Helvetica';
 }
 
 .page-container h1 {
-    font-size: 32px;
-    color: #fff;
-    background-color: #3498db;
-    padding: 10px 20px;
-    font-family: 'Song Myung';
-    text-align: center;
-    margin: 0;
+    font-size: 2.5rem;
+    color: #120f0f;
+    font-family: 'Helvetica';
+    margin-top: 20px;
     display: inline-block;
-    border-radius: 80px;
 }
 
 .page-container {
@@ -30,40 +27,46 @@
 .card {
     border: 1px solid #ddd;
     border-radius: 8px;
-    overflow: hidden;
     margin: 16px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    height: 500px;
-    width: 1000px;
+    margin-bottom: 30px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    width: 100%;
 }
 
 .card-image {
     width: 100%;
-    height: 70%;
+    height: 75%;
     object-fit: cover;
+    border-radius: 8px;
 }
 
 .card-content {
-    padding: 16px;
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+
 }
 
 .card-title {
-    font-size: 1.4rem;
-    margin-bottom: 8px;
+    font-size: 1.8rem;
+    margin-bottom: 30px;
     text-align: left;
+    font-family: 'Helvetica';
+    font-weight: bold;
 }
 
 .card-description {
     color: #555;
-    margin-bottom: 16px;
-    text-align: left;
-    font-size: 1.3rem;
+    margin: 20px;
+    text-align: center;
+    font-size: 3.3rem;
+    font-weight: 700;
 }
 
 .btn {
     background-color: #3498db;
     color: #fff;
-    padding: 8px 16px;
+    padding: 12px 20px;
     border: none;
     border-radius: 80px;
     cursor: pointer;
@@ -71,17 +74,47 @@
 }
 
 .card-container {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(30%, 1fr));
     justify-content: space-between;
-    margin: 16px -8px;
-}
-
-.card-image:hover {
-    transform: scale(1.1);
-    transition: transform 0.3s ease;
+    gap: 40px;
+    margin: 10px;
 }
 
 .button-container {
+    margin-top: 20px; 
     display: flex;
-    gap: 8px;
+    gap: 16px; 
+}
+
+.button-container button {
+    font-size: 1.5rem; 
+    font-weight: bold;
+}
+
+.card:hover {
+    border: 2px solid #3498db; /* Change border color to your desired highlight color */
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Add a subtle box shadow on hover */
+}
+
+.info-btn {
+    background-color: #3498db; 
+    color: #fff; 
+    border: none;
+    border-radius: 50%; 
+    cursor: pointer;
+    transition: background-color 0.3s ease; 
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+}
+
+.info-btn i {
+    font-size: 1.8rem; /* Adjust the font size as needed */
+}
+
+.custom-select {
+    font-size: 20px; /* Adjust the font size as needed */
+}
+
+.input-group-text {
+    font-size: 20px; /* Adjust the font size as needed */
 }
