--- a/src/app/components/service/platinum/platinum.component.scss
+++ b/src/app/components/service/platinum/platinum.component.scss
@@ -6,7 +6,10 @@
 .page-title h1 {
     font-size: 64px; /* Adjusted font size */
     color: #120f0f;
-    padding: 10px 20px; /* Added padding for better styling */
+    padding-top: 3.6%; /* Custom top padding */
+    padding-right: 20px; /* Adjust the right padding as needed */
+    padding-bottom: 10px; /* Adjust the bottom padding as needed */
+    padding-left: 20px; /* Adjust the left padding as needed */
     font-family: 'Helvetica' /* Set Dancing Script as the font family */
 }
 
