--- a/src/app/components/service/service.component.scss
+++ b/src/app/components/service/service.component.scss
@@ -13,7 +13,7 @@
 }
 
 .page-container h1 {
-    font-size: 2.5rem;
+    font-size: 2.7rem;
     color: #120f0f;
     font-family: 'Helvetica';
     margin-top: 20px;
@@ -48,7 +48,7 @@
 }
 
 .card-title {
-    font-size: 1.8rem;
+    font-size: 140%;
     margin-bottom: 30px;
     text-align: left;
     font-family: 'Helvetica';
@@ -59,12 +59,12 @@
     color: #555;
     margin: 20px;
     text-align: center;
-    font-size: 3.3rem;
+    font-size: 220%;
     font-weight: 700;
 }
 
 .btn {
-    background-color: #3498db;
+    background-color: #FF2E63;
     color: #fff;
     padding: 12px 20px;
     border: none;
@@ -88,7 +88,7 @@
 }
 
 .button-container button {
-    font-size: 1.5rem; 
+    font-size: 100%; 
     font-weight: bold;
 }
 
@@ -98,7 +98,7 @@
 }
 
 .info-btn {
-    background-color: #3498db; 
+    background-color: #FF2E63;
     color: #fff; 
     border: none;
     border-radius: 50%; 
@@ -117,4 +117,8 @@
 
 .input-group-text {
     font-size: 20px; /* Adjust the font size as needed */
+}
+
+.container {
+    padding-top: 5%; /* Adjust the top margin as needed */
 }
