theme changes and styling

--- a/src/app/components/faq/faq.component.scss
+++ b/src/app/components/faq/faq.component.scss
@@ -7,7 +7,7 @@
   }
   
   .mat-toolbar {
-    background-color: #3498db;
+    background-color: #FF2E63;
     color: #fff;
     border-radius: 8px 8px 0 0;
   }
