home page update

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -14,18 +14,18 @@
 
 .company-name {
   font-size: 50px;
-  color: #E5E4E2;
+  color: #F5F5F5;
 }
 
 .contact-number {
   font-size: 20px;
-  color: #fff;
+  color: #F5F5F5;
   margin-bottom: 20px;
 }
 
 .book-now-btn {
-  background-color: #FF2E63;
-  color: #fff;
+  background-color: #FC5185;
+  color: #F5F5F5;
   padding: 10px 20px;
   border: none;
   border-radius: 5px;
