--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -51,7 +51,7 @@ body {
     position: fixed;
     width: 100%;
     background: #fff;
-    color: #252A34;
+    color: #364F6B;
     opacity: 0.85;
     height: 60px;
     z-index: 12;
