--- a/src/app/components/faq/faq.component.html
+++ b/src/app/components/faq/faq.component.html
@@ -1,7 +1,6 @@
-<div class="faq-section card">
-    <mat-toolbar color="primary" class="mat-elevation-z4">
-        FAQs
-    </mat-toolbar>
+<div class="container">
+  <div class="faq-section">
+    <h3 class="heading">FAQs</h3>
     <div *ngFor="let faqItem of faqItems" class="faq-item">
       <div class="question" (click)="toggleAnswer(faqItem)">
         <h3>{{ faqItem.question }}</h3>
@@ -11,5 +10,6 @@
         <p>{{ faqItem.answer }}</p>
       </div>
     </div>
+  </div>
 </div>
   
