--- a/src/app/components/reviews/reviews.component.html
+++ b/src/app/components/reviews/reviews.component.html
@@ -1,14 +1,11 @@
-<div class="card">
-  <mat-toolbar color="primary" class="mat-elevation-z4">
-    Customer Reviews
-  </mat-toolbar>
-  <div class="card-content">
-    <div *ngFor="let review of reviews" class="review">
-      <div class="customer-info">
-        <p class="customer-name">{{ review.customerName }}</p>
-        <p class="review-date">{{ review.date }}</p>
-      </div>
-      <p class="customer-feedback">{{ review.feedback }}</p>
+<div class="container">
+  <div class="customer-reviews">
+    <h3 class="heading">Customer Reviews</h3>
+    <div class="carousel">
+        <div *ngFor="let review of reviews" class="review">
+            <p class="customer-name">{{ review.customerName }}</p>
+            <p class="customer-feedback">{{ review.feedback }}</p>
+        </div>
     </div>
   </div>
 </div>
