--- a/src/app/components/reviews/reviews.component.scss
+++ b/src/app/components/reviews/reviews.component.scss
@@ -1,41 +1,63 @@
-.card {
-  border: 1px solid #ddd;
-  border-radius: 8px;
+.container {
+  padding: 0 160px; /* Space on left and right */
+  margin-top: 20px;
+}
+
+.customer-reviews {
+  margin-top: 20px;
+  background-color: #f5f5f5;
+  border-radius: 10px;
+  padding: 20px;
   overflow: hidden;
-  margin: 16px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.mat-toolbar {
-  background-color: #FF2E63;
-  color: #fff;
-  border-radius: 8px 8px 0 0;
+.heading {
+  color: #364f6b;
+  text-align: center;
 }
 
-.card-content {
-  padding: 16px;
-}
-
-.customer-info {
+.carousel {
+  margin-top: 20px;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  overflow-x: auto;
+  scroll-snap-type: x mandatory;
+  gap: 20px; /* Space between reviews */
+}
+
+.review {
+  flex: 0 0 calc(33.33% - 20px); /* Each review takes up one-third of the container width */
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 15px;
+  scroll-snap-align: start;
+  transition: transform 0.5s ease;
 }
 
 .customer-name {
   font-weight: bold;
-  margin: 0;
-}
-
-.review {
-  margin: 7px;
-}
-
-.review-date {
-  color: #555;
-  margin: 0;
+  color: #fc5185;
 }
 
 .customer-feedback {
-  margin: 0;
+  color: #000;
+}
+
+.carousel:not(:hover) .review:hover {
+  transform: translateX(-100%);
+}
+
+.carousel:hover .review {
+  transform: translateX(33.33%);
+}
+
+/* For smooth transition */
+.carousel {
+  scroll-behavior: smooth;
+}
+
+/* Media query to adjust review height for smaller screens */
+@media screen and (max-width: 768px) {
+  .review {
+    flex: 0 0 calc(50% - 20px);
+  }
 }
