--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -17,7 +17,7 @@
           <h4>Quick Links</h4>
           <ul>
             <li><a routerLink="/">Home</a></li>
-            <li><a routerLink="/services">Services & Prices</a></li>
+            <li><a routerLink="/service">Services & Prices</a></li>
             <li><a routerLink="/book-now">Book Now</a></li>
           </ul>
         </div>
