--- a/src/app/components/book-now/book-now.component.html
+++ b/src/app/components/book-now/book-now.component.html
@@ -1,7 +1,8 @@
 <!-- booking-form.component.html -->
 <header style="position: relative;">
   <img src="../../../assets/home-images/imagez.jpg" alt="" style="width: 100%; height: 300px;">
-  <h1 style="position: absolute; top: 61%; left: 20%; transform: translate(-50%, -50%); color: white; font-family: Helvetica, sans-serif; text-align: left">Book Now</h1>
+  <h1 style="position: absolute; top: 61%; left: 50%; transform: translate(-50%, -50%); 
+  color: white; font-family: Helvetica, sans-serif; text-align: left; font-weight: bold; font-size: 50px;">Book Now</h1>
 </header>
 <div class="container">
   <div class="card-container">
@@ -272,7 +273,7 @@
     </div>
 </div>
     
-      <button type="submit" [disabled]="!bookNowForm.valid">Submit</button>
+      <button type="submit" class="submit-button" [disabled]="!bookNowForm.valid">Submit</button>
     </form>
   </div>
   
