--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,32 +1,33 @@
-<footer class="footer">
-    <div class="container">
-      <div class="footer-content">
-        <!-- Company Logo -->
-        <div class="logo">
-          <img src="assets/home-images/cleaning_services_logo.jpg" alt="Logo">
+    <footer class="footer-bs">
+        <div class="row">
+        	<div class="col-md-3 footer-brand animated fadeInLeft">
+            	<h2>LuxeClean Services</h2>
+                <p>Suspendisse hendrerit tellus laoreet luctus pharetra. Aliquam porttitor vitae orci nec ultricies. Curabitur vehicula, libero eget faucibus faucibus, purus erat eleifend enim, porta pellentesque ex mi ut sem.</p>
+                <p>© 2014 BS3 UI Kit, All rights reserved</p>
+            </div>
+        	<div class="col-md-4 footer-nav animated fadeInUp">
+            	<h4>Menu —</h4>
+            	<div class="col-md-6">
+                    <ul class="pages">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Services</a></li>
+                        <li><a href="#">Book Now</a></li>
+                    </ul>
+                </div>
+            	<div class="col-md-6">
+                    <ul class="list">
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Contacts</a></li>
+                    </ul>
+                </div>
+            </div>
+        	<div class="col-md-2 footer-social animated fadeInDown">
+            	<h4>Follow Us</h4>
+            	<ul>
+                	<li><a href="#">Facebook</a></li>
+                	<li><a href="#">Twitter</a></li>
+                	<li><a href="#">Instagram</a></li>
+                </ul>
+            </div>
         </div>
-  
-        <!-- Contact Details -->
-        <div class="contact-details">
-          <p>Contact Us:</p>
-          <p>Email: info@luxecleanservices.com</p>
-          <p>Phone: +1 (123) 456-7890</p>
-        </div>
-
-        <div class="quick-links">
-          <h4>Quick Links</h4>
-          <ul>
-            <li><a routerLink="/">Home</a></li>
-            <li><a routerLink="/service">Services & Prices</a></li>
-            <li><a routerLink="/book-now">Book Now</a></li>
-          </ul>
-        </div>
-  
-        <!-- Link to "BOOK NOW" form page -->
-        <div class="book-now-link">
-          <a routerLink="/book-now">BOOK NOW</a>
-        </div>
-      </div>
-    </div>
-  </footer>
-  
+    </footer>
