change hover color, book now home

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -32,3 +32,8 @@
   font-size: 25px;
   cursor: pointer;
 }
+
+.book-now-btn:hover {
+  background-color: #F5F5F5; /* Change background color on hover */
+  color: #FC5185;
+}
