footer update - bold contact

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -22,8 +22,8 @@ margin-bottom:10px;
 }
 
 .footer-bs .footer-nav ul.list { list-style:none; padding:0px; }
-.footer-bs .footer-nav ul.list li { padding:5px 0px;}
-.footer-bs .footer-nav ul.list a { color:rgba(255,255,255,0.80); text-decoration:none;}
+.footer-bs .footer-nav ul.list li { padding:5px 0px; font-weight:bold;}
+.footer-bs .footer-nav ul.list a { color:rgba(255,255,255,0.80); text-decoration:none; }
 .footer-bs .footer-nav ul.list a:hover { color:#3FC1C9 }
 
 .footer-bs .footer-social ul { list-style:none; padding:0px; }
