--- a/src/app/components/reviews/reviews.component.scss
+++ b/src/app/components/reviews/reviews.component.scss
@@ -8,7 +8,7 @@
   background-color: #f5f5f5;
   border-radius: 10px;
   padding: 20px;
-  overflow: hidden;
+  position: relative; /* Position for arrow buttons */
 }
 
 .heading {
@@ -18,10 +18,10 @@
 
 .carousel {
   margin-top: 20px;
+  padding: 20px;
   display: flex;
-  overflow-x: auto;
-  scroll-snap-type: x mandatory;
   gap: 20px; /* Space between reviews */
+  overflow: hidden; /* Hide the overflow */
 }
 
 .review {
@@ -29,7 +29,6 @@
   background-color: #fff;
   border-radius: 10px;
   padding: 15px;
-  scroll-snap-align: start;
   transition: transform 0.5s ease;
 }
 
@@ -42,22 +41,22 @@
   color: #000;
 }
 
-.carousel:not(:hover) .review:hover {
-  transform: translateX(-100%);
+.prev-btn,
+.next-btn {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: #fc5185;
+  color: #364f6b;
+  font-size: 20px;
+  cursor: pointer;
+  z-index: 1; /* Ensure buttons appear above reviews */
 }
 
-.carousel:hover .review {
-  transform: translateX(33.33%);
+.prev-btn {
+  left: 20px; /* Adjust position */
 }
 
-/* For smooth transition */
-.carousel {
-  scroll-behavior: smooth;
-}
-
-/* Media query to adjust review height for smaller screens */
-@media screen and (max-width: 768px) {
-  .review {
-    flex: 0 0 calc(50% - 20px);
-  }
+.next-btn {
+  right: 20px; /* Adjust position */
 }
