update footer content

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,8 +2,8 @@
     <div class="row">
       <div class="col-md-3 footer-brand animated fadeInLeft">
           <h2>LuxeClean Services</h2>
-            <p>About LuxeClean Services --- Suspendisse hendrerit tellus laoreet luctus pharetra. Aliquam porttitor vitae orci nec ultricies. Curabitur vehicula, libero eget faucibus faucibus, purus erat eleifend enim, porta pellentesque ex mi ut sem.</p>
-            <p>© 2014 BS3 UI Kit, All rights reserved</p>
+            <p>About Us - We are a dedicated team of professionals committed to providing exceptional cleaning services to our clients.</p>
+            <p>© 2024, All rights reserved</p>
         </div>
       <div class="col-md-4 footer-nav animated fadeInUp">
           <h4>Menu: </h4>
